[package]
name = "jklmbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clipboard = "0.5.0" 
windows-hotkeys = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winput = "0.2.5"
colored = "2.1.0"
